--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -42,7 +42,7 @@ build_and_push_to_docker_hub:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: amelchenko/yamdb_final:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
 
 deploy:
     runs-on: ubuntu-latest
@@ -56,6 +56,7 @@ deploy:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
