--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -7,9 +7,7 @@ services:
       - ./.env
 
   web:
-    build:
-      context: ../
-      dockerfile: api_yamdb/Dockerfile
+    image: amelchenkono/infra_project:latest
     restart: always
     volumes:
       - static_value:/app/static/
