--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -14,11 +14,11 @@ jobs:
         python-version: 3.8
 
     - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip 
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        pip install -r api_yamdb/requirements.txt 
+    - name: Test with flake8 and pytests
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install -r requirements.txt
-    - name: Test with pytest
-      run: pytest
-    - name: Test flake8
-      run: flake8 api/ api_yamdb/ --exclude api/migrations/,api_yamdb/settings.py
+        python -m flake8 
+        pytest
