--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -2,38 +2,6 @@ name: Django-app workflow
 
 on: [push]
 
-jobs:
-  tests:
-    # «Раннер» — создание изолированного окружения с последней версией Ubuntu
-    runs-on: ubuntu-latest
-
-    steps:
-    # Запуск actions checkout — готового скрипта
-    # для клонирования репозитория
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      # Запуск actions setup-python — готового скрипта
-      # для развёртывания окружения Python
-      uses: actions/setup-python@v2
-      with:
-        # Выбор версии Python
-        python-version: 3.7
-
-    - name: Install dependencies
-      run: | 
-        # обновление pip
-        python -m pip install --upgrade pip 
-        # установка flake8 и его плагинов
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        # установка зависимостей
-        cd api_yamdb/
-        pip install -r requirements.txt 
-    - name: Test with flake8 and pytest
-      run: |
-        # запуск проверки проекта по flake8
-        python -m flake8
-        cd .
-        pytest
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -56,7 +24,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: georrge/infra_yand:latest
+          tags: amelchenkono/api_yamdb:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -69,10 +38,11 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             # Выполняет pull образа с DockerHub
-            sudo docker pull georrge/infra_yand
+            sudo docker pull amelchenkono/api_yamdb
             #остановка всех контейнеров
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 georrge/infra_yand
+            sudo docker run --rm -d -p 5000:5000 amelchenkono/api_yamdb
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
