--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -8,13 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        # Проверка доступности репозитория Docker Hub для workflow
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
-        # Вызов сборщика контейнеров docker
         uses: docker/setup-buildx-action@v1
       - name: Login to Docker
-        # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -24,7 +21,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: amelchenkono/api_yamdb:latest
+          tags: amelchenkono/infra_project:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -38,10 +35,10 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             # Выполняет pull образа с DockerHub
-            sudo docker pull amelchenkono/api_yamdb
+            sudo docker pull amelchenkono/infra_project
             #остановка всех контейнеров
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 amelchenkono/api_yamdb
+            sudo docker run --rm -d -p 5000:5000 amelchenkono/infra_project
 
   send_message:
     runs-on: ubuntu-latest
