--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -21,7 +21,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: amelchenkono/infra_project:latest
+          tags: amelchenkono/api_yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
