--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: amelchenkono/infra_project:latest
+          tags: amelchenkono/api_yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,6 +41,7 @@ jobs:
 
   send_message:
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
     - name: send message
       uses: appleboy/telegram-action@master
