--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ ignore =
 exclude =
     tests/,
     */migrations/,
-    venv/,
+    api_yamdb/venv/,
     env/
 per-file-ignores =
     */settings.py:E501
