--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -7,7 +7,9 @@ services:
       - ./.env
 
   web:
-    image: amelchenkono/infra_project:latest
+    build:
+      context: ../
+      dockerfile: api_yamdb/Dockerfile
     restart: always
     volumes:
       - static_value:/app/static/
