--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   tests:
+    # «Раннер» — создание изолированного окружения с последней версией Ubuntu 
     runs-on: ubuntu-latest
 
     steps:
@@ -32,26 +33,25 @@ jobs:
         # запуск проверки проекта по flake8
         python -m flake8
 
-  build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
+  deploy:
     runs-on: ubuntu-latest
-    needs: tests
     steps:
-      - name: Check out the repo
-        # Проверка доступности репозитория Docker Hub для workflow
-        uses: actions/checkout@v2 
-      - name: Set up Docker Buildx
-        # Вызов сборщика контейнеров docker
-        uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
-        # Запуск скрипта авторизации на Docker Hub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }} 
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
-        # Пуш образа в Docker Hub 
-        uses: docker/build-push-action@v2 
-        with:
-          push: true
-          tags: amelchenkono/api_yamdb:v2.11.1989
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+        script: |
+          sudo docker-compose stop
+          sudo docker-compose rm web
+          touch .env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          sudo docker pull amelchenkono/api_yamdb:latest 
+          sudo docker-compose up -d
