--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -13,13 +13,17 @@ jobs:
 
     - name: Install dependencies
       run: |
+        # обновление pip
         python -m pip install --upgrade pip 
+        # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        # установка зависимостей
         pip install -r api_yamdb/requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
+        pytest
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
