--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -13,6 +13,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        # обновление pip
         python -m pip install --upgrade pip 
         # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
@@ -22,6 +23,7 @@ jobs:
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
+        pytest
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
